CORE-13907: Upgrade Jackson, Snake YAML and JUnit. (#584)