@@ -61,6 +61,7 @@ allprojects {
                 jvmArgs '--add-opens', 'java.base/java.io=ALL-UNNAMED',
                         '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
                         '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
+                        '--add-opens', 'java.base/java.time=ALL-UNNAMED',
                         '--add-opens', 'java.base/java.util=ALL-UNNAMED',
                         '--add-opens', 'java.base/sun.nio.fs=ALL-UNNAMED',
                         '--illegal-access=warn'
